--- a/java/1. 자바 문서 보는법.md
+++ b/java/1. 자바 문서 보는법.md
@@ -24,7 +24,7 @@
 
 - 클래스는 서로 연관된 변수와 메소드를 모아놓은 것이다.
 
-![image-20210423143710907](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423143710907.png)
+![image-20210423143710907](https://user-images.githubusercontent.com/80496345/116240997-6c16bc00-a79f-11eb-805f-2df1824e5fbd.png)
 
 4. [인스턴스] instance
 
@@ -42,7 +42,7 @@
 
 - object > Writer > PrintWriter
 
-![image-20210423143854198](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423143854198.png)
+![image-20210423143829516](https://user-images.githubusercontent.com/80496345/116240999-6caf5280-a79f-11eb-927e-0a5b3e7e3d2c.png)
 
 ```java
 import java.io.FileNotFoundException;
