--- a/java/11. 객체.md
+++ b/java/11. 객체.md
@@ -2,7 +2,7 @@
 
 모든 클래스, 객체의 조상으로 자바에서는 모든 클래스는 암시적으로 object클래스를 상속받고 있다. 이러한 클래스가 존재하는 이유는 모든 클래스가 공통으로 포함하고 있어야 하는 기능을 제공하기 위해서다.
 
-![image-20210423165433111](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423165433111.png)
+![image-20210423165433111](https://user-images.githubusercontent.com/80496345/116241047-746ef700-a79f-11eb-95ef-a20f75190b85.png)
 
 ```java
 public class Main {
