--- a/java/12. 실습 히어로 게임 만들기.md
+++ b/java/12. 실습 히어로 게임 만들기.md
@@ -1,6 +1,6 @@
 # 12. 실습 히어로 게임 만들기
 
-![image-20210423165547193](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423165547193.png)
+![image-20210423165547193](https://user-images.githubusercontent.com/80496345/116241050-75078d80-a79f-11eb-98b9-dfe3297dffd6.png)
 
 ```java
 public class Hero {
