--- a/java/4. 제어문.md
+++ b/java/4. 제어문.md
@@ -29,11 +29,11 @@ String foo = "Hello World";
 
 primitive(원시 데이터) 면 ==라 쓰고 아니라면 equals를 사용하자.
 
-![image-20210423144449380](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423144449380.png)
+![image-20210423144449380](https://user-images.githubusercontent.com/80496345/116241010-6e791600-a79f-11eb-9d4f-4c9ec150d382.png)
 
 왜냐하면 자바에서 ==은 같은 위치에 있는 지를 물어보는 동등비교연산자이다.
 
-![image-20210423144556754](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423144556754.png)
+![image-20210423144556754](https://user-images.githubusercontent.com/80496345/116241012-6e791600-a79f-11eb-84f2-0899479ba584.png)
 
 int p1 = 1
 
