--- a/java/7. 클래스.md
+++ b/java/7. 클래스.md
@@ -78,7 +78,7 @@ public class 이름() {
 
 3. 상속 관계 : 종류 객체와 구체적인 사물 객체 관계
 
-![image-20210423150115879](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423150115879.png)
+![image-20210423150115879](https://user-images.githubusercontent.com/80496345/116241023-7042d980-a79f-11eb-8d7b-2a51fc223194.png)
 
 ### 객체 지향 프로그래밍의 특징
 
@@ -96,7 +96,7 @@ public class 이름() {
 - 클래스로부터 만들어진 객체를 해당 클래스의 인스턴스
 - 하나의 클래스로부터 여러개의 인스턴스를 만들 수 있다.
 
-![image-20210423150143348](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423150143348.png)
+![image-20210423150143348](https://user-images.githubusercontent.com/80496345/116241029-70db7000-a79f-11eb-9eda-b04852e1a0c5.png)
 
 
 
@@ -262,7 +262,7 @@ public class MYOO {
 
 this() this가 car  인스턴스를 가리키기 때문에 this(~,~,~)로 쓰게 되면 인자가 3개로 초기화되어있는 맨 밑 생성자를 호출하게된다.
 
-![image-20210423154512791](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423154512791.png)
+![image-20210423154512791](https://user-images.githubusercontent.com/80496345/116241033-71740680-a79f-11eb-9c6a-9b327566763e.png)
 
 
 
@@ -514,11 +514,11 @@ public class staticMethod {
 
 내 정보를 얼마만큼 공개 할 것 인가를 정할 수 있다.
 
-![image-20210423162838198](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423162838198.png)
+![image-20210423162838198](https://user-images.githubusercontent.com/80496345/116241035-720c9d00-a79f-11eb-9d05-532b74f9a799.png)
 
 
 
-![image-20210423162914452](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423162914452.png)
+![image-20210423162914452](https://user-images.githubusercontent.com/80496345/116241038-72a53380-a79f-11eb-80db-805863f89f61.png)
 
 자신 패키지0  다른 패키지 x → default
 
