--- a/java/8. 상속(Inheritance).md
+++ b/java/8. 상속(Inheritance).md
@@ -95,7 +95,7 @@ this 는 자기 자신 클래스 내에 있는 메소드를 지칭할 때,
 
 super는 부모 클래스 내에 있는 메소드를 지칭할 때 쓴다.!!
 
-![image-20210423164543391](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423164543391.png)
+![image-20210423164543391](https://user-images.githubusercontent.com/80496345/116241039-72a53380-a79f-11eb-87fc-636c9573a6a9.png)
 
 - ----- 상속과 생성자
 
@@ -177,7 +177,7 @@ public class Main {
 }
 ```
 
-![image-20210423164754269](C:\Users\aodeh\AppData\Roaming\Typora\typora-user-images\image-20210423164754269.png)
+![image-20210423164754269](https://user-images.githubusercontent.com/80496345/116241041-733dca00-a79f-11eb-8372-595366be1dfc.png)
 
 ```java
 abstract class Animal {
