--- a/java/15-2. 컬렉션 프래임워크_생활코딩.md
+++ b/java/15-2. 컬렉션 프래임워크_생활코딩.md
@@ -101,6 +101,65 @@ for(int i=0; i<al.size(); i++){
 
 제네릭을 사용하면 ArrayList 내에서 사용할 데이터 타입을 인스턴스를 생성할 때 지정할 수 있기 때문에 데이터를 꺼낼 때(String val = al.get(i);) 형변환을 하지 않아도 된다.
 
+
+
+### ArrayList 다양한 메소드
+
+**List -> Array(배열)**
+
+```java
+ArrayList<String> arrayList = new ArrayList<>();
+
+arrayList.add("Test1");
+arrayList.add("Test2");
+arrayList.add("Test3");
+
+String[] array = arrayList.toArray(new String[arrayList.size()]);
+
+출처: https://mommoo.tistory.com/32 [개발자로 홀로 서기]
+```
+
+**Array(배열) -> List**
+
+```java
+String[] array = new String[3];
+
+array[0] = "Test1";
+array[1] = "Test2";
+array[2] = "Test3";
+
+ArrayList<String> arrayList = new ArrayList<>(Arrays.asList(array));
+
+```
+
+
+
+**ArrayList.remove(int index)**
+
+```java
+String[] fruitsArray = {"apple", "banana", "kiwi", "mango"};
+ArrayList<String>  fruits = new ArrayList<>(Arrays.asList(fruitsArray));
+System.out.println("all: " + fruits.toString());
+
+String returned = fruits.remove(2);
+System.out.println("remove(2): " + fruits.toString());
+System.out.println("returned: " + returned);
+```
+
+결과
+
+```java
+all: [apple, banana, kiwi, mango]
+remove(2): [apple, banana, mango]
+returned: kiwi
+```
+
+그외 다양한 메소드
+
+https://codechacha.com/ko/java-collections-arraylist-clone/
+
+
+
 ## 컬렉션즈 프래임워크란?
 
 <iframe allowfullscreen="" frameborder="0" height="360" src="https://www.youtube.com/embed/E_WMaPuY_oA" width="640" style="margin: 0px; padding: 0px; border: 0px; outline: 0px; font-size: 13.2px; vertical-align: baseline; box-shadow: rgb(102, 102, 102) 0px 0px 10px;"></iframe>
